Refactoring the entire mail manager

--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
@@ -51,7 +51,7 @@
                         Best,<br>
                         Michael Baker<br>
                         Head of Communications<br>
-                        <a style="text-decoration: none; color: #247bd1;" href="{uni_Url}">{uni_Url}</a><br>
+                        <a style="text-decoration: none; color: #247bd1;" href="{uni_Url}">https://www.spitball.co/</a><br>
                         79 Madison Ave<br>
                         New York, NY 10016<br><br>
                     </div>
