fix updates email template.

--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/UpdatesEmail/More1.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/UpdatesEmail/More1.html
@@ -10,7 +10,7 @@
 <!-- * SEE ALL UPDATES HERE * -->
 <tr>
     <td bgcolor="#ffffff" width="35"></td>
-    <td width="550">{NUM-MORE} more updates - <a style="text-decoration:none;color:#0371c8" href="{BOX-URL}">See all</a></td>
+    <td width="550"><a style="text-decoration:none;color:#0371c8" href="{BOX-URL}">See all</a></td>
     <td bgcolor="#ffffff" width="15"></td>
  </tr>               
 <!-- * END OF SEE ALL UPDATES * -->
