--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/UpdatesEmail/Updates1.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/UpdatesEmail/Updates1.html
@@ -202,12 +202,12 @@
             body[yahoo] .logo {
                 width: 320px !important;
                 height: 54px !important;
-                background: #3293f6 !important;
+                background: #FFFFFF !important;
             }
 
             body[yahoo] .logowrapper {
                 width: 100% !important;
-                background: #3293f6 !important;
+                background: #FFFFFF !important;
             }
 
             body[yahoo] .dashboard {
@@ -294,11 +294,14 @@
                         <td>
 
                             <!-- * LOGO HERE * -->
-                            <table cellpadding="0" cellspacing="0" border="0" align="center" class="logo" width="600" bgcolor="  #3293f6">
-                                <tr bgcolor="  #3293f6">
-                                    <td class="logo" width="600" style="min-width: 600px" bgcolor="  #3293f6" align="left" valign="bottom">
-                                        <a target="_blank" href="https://www.Spitball.co">
-                                            <img style="min-width: 600px" width="600" height="204" align="left" valign="bottom" src="https://zboxstorage.blob.core.windows.net/mailcontainer/Spitball/header_pic_new_eng.png" alt="" title="Logo Title Here" /></a>
+                            <table cellpadding="0" cellspacing="0" border="0" align="center" class="logo" width="600" bgcolor="  #FFFFFF" ><!---->
+                                <!--bgcolor="  #3293f6"-->
+                                <tr bgcolor="  #FFFFFF">
+                                    <td class="logo" width="600" style="min-width: 600px" bgcolor="  #FFFFFF"  align="left" valign="bottom"><!--bgcolor="  #3293f6"-->
+                                        <a target="_blank" href="https://www.Spitball.co/">
+                                            <img width="220" height="49" align="left" valign="bottom" src="https://az32006.vo.msecnd.net/emailimages/logo.jpg" alt="Spitball" title="Spitball">
+                                            <!--<img style="min-width: 600px" width="600" height="204" align="left" valign="bottom" src="https://zboxstorage.blob.core.windows.net/mailcontainer/Spitball/header_pic_new_eng.png" alt="" title="Logo Title Here"/>-->
+                                        </a>
                                     </td>
                                 </tr>
                             </table>
@@ -338,7 +341,7 @@
 
                                 <!-- * UPDATES HERE * -->
                                 <tr>
-                                    <td align="left">You have {NUM-UPDATES} updates: <a style="text-decoration: none;" href="https://www.Spitball.co/dashboard">{X-ANSWERS}</a> <a style="text-decoration: none;" href="https://www.Spitball.co/dashboard">{X-QUESTIONS}</a> <a style="text-decoration: none;" href="https://www.Spitball.co/dashboard">{X-NEW-ITEMS}</a> Plus there&#39;s always more to check out on Spitball.<br />
+                                    <td align="left">You have {NUM-UPDATES}: <a style="text-decoration: none;" href="https://www.Spitball.co/dashboard">{X-ANSWERS}</a> <a style="text-decoration: none;" href="https://www.Spitball.co/dashboard">{X-QUESTIONS}</a> <a style="text-decoration: none;" href="https://www.Spitball.co/dashboard">{X-NEW-ITEMS}</a> plus there&#39;s always more to check out on Spitball.<br />
                                     </td>
                                 </tr>
                                 <!-- * END OF UPDATES * -->
@@ -401,7 +404,7 @@
 
                                 <!-- * BUTTON TEXT * -->
                                 <tr>
-                                    <td class="buttontext" align="center"><a style="text-decoration: none; color: #FFFFFF; font-size: 16px;" href="https://www.Spitball.co">View all on Spitball</a></td>
+                                    <td class="buttontext" align="center"><a style="text-decoration: none; color: #FFFFFF; font-size: 16px;" href="https://www.Spitball.co/">Take Me to Spitball</a></td>
                                 </tr>
                                 <!-- * END OF BUTTON TEXT * -->
                             </table>
