Fixed flashcard height on feed posts + email text decoration issue (7040)

--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/InviteCourseHe.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/InviteCourseHe.html
@@ -195,9 +195,9 @@
                 <tr>
                     <td width="25"></td> 
                     <td align="right" style="font-size:12px; color:#383838;"><a style="color:  #3293f6; text-decoration:none;" href="mailto:{email}">.{email}</a>הודעה זו נשלחה ל<br />
-אם תרצה/י לשנות את תדירות קבלת ההודעות, אנא עדכנ/י את <a target="_blank" style="color:#919191; text-decoration:none;" href="https://www.spitball.co/account/settings/notification/">הגדרות ההתראות בחשבונך</a>
+אם תרצה/י לשנות את תדירות קבלת ההודעות, אנא עדכנ/י את <a target="_blank" style="color:#919191; text-decoration:underline;" href="https://www.spitball.co/account/settings/notification/">הגדרות ההתראות בחשבונך</a>
                         אם לא תרצה/י לקבל עוד התראות,      
-                        <a target="_blank" style="color:#919191; text-decoration:none;" href="{unsubscribeUrl}">בטל/י מעקב</a>
+                        <a target="_blank" style="color:#919191; text-decoration:underline;" href="{unsubscribeUrl}">בטל/י מעקב</a>
                             </td>
                     <td width="25"></td>
                 </tr>
