--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/Market.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/Market.html
@@ -87,7 +87,7 @@
 	<tbody>
 		<tr>
 			<td width="25">&nbsp;</td>
-			<td align="right" dir="rtl" style="font-size:12px;color:#383838;font-family:helvetica,arial;line-height:18px">הודעה זו נשלחה ל <a dir="rtl" style="color:#3293f6;text-decoration:none">{email}</a> אם תרצה/י לשנות את תדירות קבלת ההודעות, אנא עדכנ/י את <a href="https://www.spitball.co/account/settings" style="color:#919191;text-decoration:none" target="_blank">הגדרות ההתראות בחשבונך</a> אם לא תרצה/י לקבל עוד התראות <a style="color:#919191;text-decoration:none" href="{unsubscribeUrl}">בטל/י מעקב.&rlm;</a></td>
+			<td align="right" dir="rtl" style="font-size:12px;color:#383838;font-family:helvetica,arial;line-height:18px">הודעה זו נשלחה ל <a dir="rtl" style="color:#3293f6;text-decoration:none">{email}</a> אם תרצה/י לשנות את תדירות קבלת ההודעות, אנא עדכנ/י את <a href="https://www.spitball.co/account/settings" style="color:#919191;text-decoration:underline" target="_blank">הגדרות ההתראות בחשבונך</a> אם לא תרצה/י לקבל עוד התראות <a style="color:#919191;text-decoration:underline" href="{unsubscribeUrl}">בטל/י מעקב.&rlm;</a></td>
 			<td width="25">&nbsp;</td>
 		</tr>
 		<tr>
