--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/ReplyToCommentMailTemplate.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/ReplyToCommentMailTemplate.html
@@ -108,7 +108,7 @@
                     <span style="font-size:12px;font-weight:normal;line-height:18px;color:#231F20;text-align:center">
                         This email was sent to {email}.
                         <br>
-                        To change the rate in which you get email go to your <a href="https://www.spitball.co/account/settings/notification" style="font-size:12px;font-weight:normal;line-height:18px;color:#231F20;text-decoration:none"> settings.</a><br>To stop receiving emails from Spitball all together <a href="{unsubscribeUrl}" style="font-size:12px;font-weight:normal;line-height:18px;color:#231F20;text-decoration:none"> unsubscribe.</a>
+                        To change the rate in which you get email go to your <a href="https://www.spitball.co/account/settings/notification" style="font-size:12px;font-weight:normal;line-height:18px;color:#231F20;text-decoration:underline"> settings.</a><br>To stop receiving emails from Spitball all together <a href="{unsubscribeUrl}" style="font-size:12px;font-weight:normal;line-height:18px;color:#231F20;text-decoration:underline"> unsubscribe.</a>
                     </span>
                 </td>
                 <td width="30"></td>
