--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/Welcomehe.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/Welcomehe.html
@@ -274,27 +274,27 @@
                     <br>
                     <br>
                     <span style="color: #3393f4;">4 טיפים איך להשתמש בספיטבול כמו מקצוען</span>
-						
-						<span style="font-size: 14px; font-weight: normal; line-height: 26px; color: #231F20; text-align: right">
-						    <ul style="margin-top: 0; margin-right:0; padding-right: 40px; list-style: inherit;">
-                                <li>
-                                    <meta charset="utf-8" />
-                                    <b id="docs-internal-guid-8813ccd8-32a9-c53d-42af-109ae89c8956" style="font-weight: normal;"><span style="font-size: 14.666666666666666px; font-family: Arial; color: #212121; background-color: #ffffff; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">צור/י קבוצת לימוד, הזמנ/י את חבריך לכיתה ושתפו בינכם מסמכי לימוד</span></b></li>
-                                <li>
-                                    <meta charset="utf-8" />
-                                    <b id="docs-internal-guid-8813ccd8-32a9-f0ac-ef0b-77c6037f3771" style="font-weight: normal;"><span style="font-size: 14.666666666666666px; font-family: Arial; color: #212121; background-color: #ffffff; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">סדר/י את המסמכים ע&quot;י יצירת תיקייה וגרירת המסמך לתוכה</span></b></li>
-                                <li>
-                                    <meta charset="utf-8" />
-                                    <b id="docs-internal-guid-8813ccd8-32aa-0f6e-b496-e1d398a38ac8" style="font-weight: normal;"><span style="font-size: 14.666666666666666px; font-family: Arial; color: #212121; background-color: #ffffff; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">שתפ/י מסמכי לימוד מ- Google Docs ו- Dropbox בצורה קלה ומהירה</span></b></li>
-                                <li>
-                                    <meta charset="utf-8" />
-                                    <b id="docs-internal-guid-8813ccd8-32aa-3252-769f-5c193517c4f6" style="font-weight: normal;"><span style="font-size: 14.666666666666666px; font-family: Arial; color: #212121; background-color: #ffffff; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">אל תשכח/י להוריד את האפליקצייה של &nbsp;ספיטבול בחינם לנייד. </span></b>
-                                </li>
-                            </ul>
-                        </span>
+
+                    <span style="font-size: 14px; font-weight: normal; line-height: 26px; color: #231F20; text-align: right">
+                        <ul style="margin-top: 0; margin-right: 0; padding-right: 40px; list-style: inherit;">
+                            <li>
+                                <meta charset="utf-8" />
+                                <b id="docs-internal-guid-8813ccd8-32a9-c53d-42af-109ae89c8956" style="font-weight: normal;"><span style="font-size: 14.666666666666666px; font-family: Arial; color: #212121; background-color: #ffffff; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">צור/י קבוצת לימוד, הזמנ/י את חבריך לכיתה ושתפו בינכם מסמכי לימוד</span></b></li>
+                            <li>
+                                <meta charset="utf-8" />
+                                <b id="docs-internal-guid-8813ccd8-32a9-f0ac-ef0b-77c6037f3771" style="font-weight: normal;"><span style="font-size: 14.666666666666666px; font-family: Arial; color: #212121; background-color: #ffffff; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">סדר/י את המסמכים ע&quot;י יצירת תיקייה וגרירת המסמך לתוכה</span></b></li>
+                            <li>
+                                <meta charset="utf-8" />
+                                <b id="docs-internal-guid-8813ccd8-32aa-0f6e-b496-e1d398a38ac8" style="font-weight: normal;"><span style="font-size: 14.666666666666666px; font-family: Arial; color: #212121; background-color: #ffffff; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">שתפ/י מסמכי לימוד מ- Google Docs ו- Dropbox בצורה קלה ומהירה</span></b></li>
+                            <li>
+                                <meta charset="utf-8" />
+                                <b id="docs-internal-guid-8813ccd8-32aa-3252-769f-5c193517c4f6" style="font-weight: normal;"><span style="font-size: 14.666666666666666px; font-family: Arial; color: #212121; background-color: #ffffff; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">אל תשכח/י להוריד את האפליקצייה של &nbsp;ספיטבול בחינם לנייד. </span></b>
+                            </li>
+                        </ul>
+                    </span>
                     <br>
                     <span style="color: #3393f4; line-height: 26px;">נתקלת בבעיה? יש לך הצעות לשיפור? </span>
-						<br>
+                    <br>
                     <meta charset="utf-8" />
                     <b id="docs-internal-guid-8813ccd8-32aa-6f6b-3393-ca81d803a321" style="font-weight: normal;"><span style="font-size: 14.666666666666666px; font-family: Arial; color: #212121; background-color: #ffffff; font-weight: 400; font-style: normal; font-variant: normal; text-decoration: none; vertical-align: baseline; white-space: pre-wrap;">שתפ/י &nbsp;אותנו! שלח/י לנו הודעה ונשמח לעזור לך.</span></b><br>
                     <br>
@@ -355,6 +355,18 @@
 
         </tbody>
     </table>
-
+    <table cellpadding="0" cellspacing="0" border="0" class="footer" width="600" align="center" bgcolor="#F5F5F5">
+        <tbody>
+            <tr>
+                <td width="25"></td>
+                <td align="right" style="font-size: 12px; color: #383838;"><a style="color: #3293f6; text-decoration: none;" href="mailto:{email}">.{email}</a>הודעה זו נשלחה ל<br />
+                    אם תרצה/י לשנות את תדירות קבלת ההודעות, אנא עדכנ/י את <a target="_blank" style="color: #919191; text-decoration: underline;" href="https://www.spitball.co/account/settings/notification/">הגדרות ההתראות בחשבונך</a>
+                    אם לא תרצה/י לקבל עוד התראות,      
+                        <a target="_blank" style="color: #919191; text-decoration: underline;" href="{unsubscribeUrl}">בטל/י מעקב</a>
+                </td>
+                <td width="25"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
