--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/ChangeEmail.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/ChangeEmail.html
@@ -176,7 +176,7 @@
                     <tr>
                         <td width="25"></td>
                         <td align="left" style="font-size: 12px; color: #383838;">This message was intended for <a style="color:   #3293f6; text-decoration: none;" href="mailto:{email}">{email}</a>.<br />
-                            If you'd like to change the frequency in which you receive these messages, please update your <a target="_blank" style="color: #919191; text-decoration: none;" href="https://www.spitball.co/account/settings/notification/">email preferences.</a> If you don't want to receive any notifications from Spitball, <a target="_blank" style="color: #919191; text-decoration: none;" href="{unsubscribeUrl}">unsubscribe</a>. </td>
+                            If you'd like to change the frequency in which you receive these messages, please update your <a target="_blank" style="color: #919191; text-decoration: underline;" href="https://www.spitball.co/account/settings/notification/">email preferences.</a> If you don't want to receive any notifications from Spitball, <a target="_blank" style="color: #919191; text-decoration: underline;" href="{unsubscribeUrl}">unsubscribe</a>. </td>
                         <td width="25"></td>
                     </tr>
                     <!-- * END OF FOOTER TERMS * -->
