--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/MarketingTemplate_he.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/MarketingTemplate_he.html
@@ -102,7 +102,7 @@
 						<span style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-align:center">
 							הודעה זו נשלחה ל {email}. 
 							<br>
-							אם תרצה/י לשנות את תדירות קבלת ההודעות, אנא עדכנ/י את <a href="https://www.spitball.co/account/settings/notification" style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-decoration:none" target="_blank">הגדרות ההתראות בחשבונך</a><br>אם לא תרצה/י לקבל עוד התראות   <a style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-decoration:none" href="{unsubscribeUrl}"> בטל/י מעקב.‏</a>	
+							אם תרצה/י לשנות את תדירות קבלת ההודעות, אנא עדכנ/י את <a href="https://www.spitball.co/account/settings/notification" style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-decoration:underline" target="_blank">הגדרות ההתראות בחשבונך</a><br>אם לא תרצה/י לקבל עוד התראות   <a style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-decoration:underline" href="{unsubscribeUrl}"> בטל/י מעקב.‏</a>	
 						</span>
 						</td>
 						<td width="30"></td>
