--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/Welcome.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/Welcome.html
@@ -272,28 +272,28 @@
                     <br>
                     <br>
                     <span style="color: #3393f4;">4 Tips On How To Use Spitball like a Pro</span>
-						
-						<span style="font-size: 14px; font-weight: normal; line-height: 24px; color: #231F20; text-align: left">
-						    <ul style="list-style: inherit; padding-left:40px; margin-left: 0;">
-                                <li>Create a private study group for direct note-sharing with friends
-                                </li>
-                                <li>Organize your coursework by dragging and dropping into folders that you create
-                                </li>
-                                <li>Upload googledocs and dropbox files to Spitball easily
-                                </li>
-                                <li>Download the free spitball app to your phone 
-                                </li>
-                            </ul>
-                        </span>
+
+                    <span style="font-size: 14px; font-weight: normal; line-height: 24px; color: #231F20; text-align: left">
+                        <ul style="list-style: inherit; padding-left: 40px; margin-left: 0;">
+                            <li>Create a private study group for direct note-sharing with friends
+                            </li>
+                            <li>Organize your coursework by dragging and dropping into folders that you create
+                            </li>
+                            <li>Upload googledocs and dropbox files to Spitball easily
+                            </li>
+                            <li>Download the free spitball app to your phone 
+                            </li>
+                        </ul>
+                    </span>
                     <br>
                     <span style="color: #3393f4;">Stressing over a feature or see something missing?</span>
-						<br>
+                    <br>
                     <span style="font-size: 14px; font-weight: normal; line-height: 24px; color: #231F20; text-align: left">Message us! We love answering questions and responding to suggestions.
                     </span>
                     <br>
                     <br>
                     <span style="color: #3393f4;">You are now a Spitballer</span>
-						<br>
+                    <br>
                     <span style="font-size: 14px; font-weight: normal; line-height: 24px; color: #231F20; text-align: left">Thanks for joining us, {Name}, as we continue on our epic quest to raise grades everywhere! 
                     </span>
                     <br>
@@ -352,6 +352,16 @@
 
         </tbody>
     </table>
+        <table dir="ltr" cellpadding="0" cellspacing="0" border="0" align="center" class="logo" width="600" bgcolor="#ffffff">
+            <tbody>
+                <tr>
+                    <td width="25"></td>
+                    <td align="left" style="font-size: 12px; color: #383838;">This message was intended for <a style="color: #3293f6; text-decoration: none;" href="mailto:{email}">{email}</a>.<br />
+                        If you'd like to change the frequency in which you receive these messages, please update your <a target="_blank" style="color: #919191; text-decoration: underline;" href="https://www.spitball.co/account/settings/notification/">email preferences.</a> If you don't want to receive any notifications from Spitball, <a target="_blank" style="color: #919191; text-decoration: underline;" href="{unsubscribeUrl}">unsubscribe</a>. </td>
+                    <td width="25"></td>
+                </tr>
+            </tbody>
+        </table>
 
 </body>
 </html>
