--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
@@ -1,120 +1,118 @@
-﻿<html><head>
-    <meta charset="utf-8">
+﻿<html>
+<head>
+    <META http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
-<body style="width:100% !important; background-color:#eee; color:#3393F4;font-family:open sans; margin:0; padding:0; font-family: sans-serif;">
-    <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#eee">
-        <tbody>
-            <tr>
-                <td height="30"></td>
-            </tr>
-        </tbody>
-    </table>
-    <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#fff">
-        <tbody>
-            <tr>
-                <td rowspan="3" height="80"></td>
-            </tr>
-            <tr>
-                <td width="30"></td>
-                <td align="center" width="540">
-                    <a href="{uni_Url}"><img width="220" height="49" align="left" src="https://az32006.vo.msecnd.net/emailimages/logo.jpg" alt="Spitball" title="Spitball"></a>
-                </td>
-                <td width="30"></td>
-            </tr>
-            <tr>
-                <td rowspan="3" height="30"></td>
-            </tr>
-        </tbody>
-    </table>
-    <!-- style="direction:rtl" -->
-    <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#fff">
-        <tbody>
-            <tr>
-                <td rowspan="3" height="30"></td>
-            </tr>
-            <tr>
-                <td width="30"></td>
-                <td>
-                    <div style="font-size:15px;font-weight:normal;line-height:24px;color:#231F20;text-align:left">
-                        Hi {name},
-                        <br> <br>
+<body>
+    <div style="width:100%!important;background-color:#eee;color:#3393f4;font-family:open sans;margin:0;padding:0;font-family:sans-serif">
+        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#eee">
+            <tbody>
+                <tr>
+                    <td height="30"></td>
+                </tr>
+            </tbody>
+        </table>
+        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#fff">
+            <tbody>
+                <tr>
+                    <td rowspan="3" height="80"></td>
+                </tr>
+                <tr>
+                    <td width="30"></td>
+                    <td align="center" width="540">
+                        <a><img width="220" height="49" align="left" src="https://az32006.vo.msecnd.net/emailimages/logo.jpg" alt="Spitball" title="Spitball"></a>
+                    </td>
+                    <td width="30"></td>
+                </tr>
+                <tr>
+                    <td rowspan="3" height="30"></td>
+                </tr>
+            </tbody>
+        </table>
+        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#fff">
+            <tbody>
+                <tr>
+                    <td rowspan="3" height="30"></td>
+                </tr>
+                <tr>
+                    <td width="30"></td>
+                    <td>
+                        <div style="font-size:15px;font-weight:normal;line-height:24px;color:#231f20;text-align:left">
+                            Hi {name},
+                            <br> <br>
 
-                        {body}
+                            {body}
 
-                        <br><br>
-                        <div style="-webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; font-size: 16px; background-color=#3393F4;">
-                            <a href="{uni_Url}" target="_blank" style="height: 25px; width: 200px; font-size: 20px; line-height: 25px; color: #ffffff; padding: 5px 10px 5px 10px; text-decoration: none; color: #ffffff; text-decoration: none; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; border: 1px solid #3393F4; text-align: center; margin: 0 auto;display: block;background-color: #3393F4;">Take me to Spitball</a>
+                            <br><br>
+                            <div>
+                                <a href="https://itunes.apple.com/app/id990911114?utm_source=email_student&utm_medium=introduction&amp;utm_campaign=promo" style="height:25px;width:200px;font-size:20px;line-height:25px;color:#ffffff;padding:5px 10px 5px 10px;text-decoration:none;color:#ffffff;text-decoration:none;border-radius:10px;border:1px solid #3393f4;text-align:center;margin:0 auto;display:block;background-color:#3393f4" target="_blank">Take me to Spitball</a>
 
+                            </div>
+                            <br>
+
+                            Best,<br>
+                            Michael Baker<br>
+                            Head of Communications<br>
+                            <a style="text-decoration:none;color:#247bd1">https://www.spitball.co/</a><br>
+                            79 Madison Ave<br>
+                            New York, NY 10016<br><br>
                         </div>
-                        <br>
-
-                        Best,<br>
-                        Michael Baker<br>
-                        Head of Communications<br>
-                        <a style="text-decoration: none; color: #247bd1;" href="{uni_Url}">https://www.spitball.co/</a><br>
-                        79 Madison Ave<br>
-                        New York, NY 10016<br><br>
-                    </div>
-                </td>
-                <td width="30"></td>
-            </tr>
-            <tr>
-                <td rowspan="3" height="30"></td>
-            </tr>
-        </tbody>
-    </table>
-    <!-- style="direction:rtl" -->
-    <!-- style="direction:rtl" -->
-    <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#fff" style="font-size:12px;font-weight:normal;line-height:18px;color:#231F20;text-align:left">
-        <tbody>
-            <tr>
-                <td width="30"></td>
-                <td valign="middle" align="left">
-                    <p style="font-size:15px;color:#3e3e3e;line-height:20px;">Copyright © 2016, Cloudents Inc.</p>
-                    <table class="app-links" style="display: block;margin-bottom: 20px;">
-  <tbody><tr>
-<td>
-                        <a target="_blank" href="https://itunes.apple.com/app/id990911114?utm_source=email_student&amp;utm_medium=introduction&amp;utm_campaign=promo" style="display: inline-block">
-                            <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/apps-apple.png" style="width: 135px; height: 40px;">
-  </a></td>
-<td>
-                        <a target="_blank" href="https://play.google.com/store/apps/details?id=com.cloudents.zbox2&amp;utm_source=email_student&amp;utm_medium=introduction&amp;utm_campaign=promo" style="display: inline-block">
-                            <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/apps-google.png" style="width: 135px; height: 40px;">
-                        </a></td>
-  </tr>
-                    </tbody></table>
-                </td>
-                <td valign="middle" style="/* padding:0px 5px */" align="center" width="150">
-                    <div style="margin-bottom: 20px;">
-                        <p style="font-size:15px;color:#3e3e3e;line-height:20px;">
-                            Connect with us<br>
-                        </p>
-                        <a href="https://www.facebook.com/spitballstudy" target="_blank"> <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/fb.png" style="margin-top: 5px;"></a>
-                        <a href="https://www.twitter.com/SpitballStudy" target="_blank"> <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/tw.png" style="margin-top: 5px;"></a>
-                        <a href="http://www.instagram.com/spitballstudy" target="_blank"> <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/in.png" style="margin-top: 5px;"></a>
-                    </div>
-                </td>
-                <td width="30"></td>
-            </tr>
-        </tbody>
-    </table>
-    <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#ddd" style="font-size:12px;font-weight:normal;line-height:18px;color:#231F20;text-align:center">
-        <tbody>
-            <tr>
-                <td rowspan="3" height="90"></td>
-            </tr>
-            <tr>
-                <td width="30"></td>
-                <td style="width:540px">
-                    <span style="font-size:12px;font-weight:normal;line-height:18px;color:#231F20;text-align:center">
-                        This email was sent to {email}.
-                        <br>To stop getting emails from us <a href="%unsubscribe_url%" style="font-size:12px;font-weight:normal;line-height:18px;color:#231F20;text-decoration:underline"> Opt-out.</a>
-                    </span>
-                </td>
-                <td width="30"></td>
-            </tr>
-        </tbody>
-    </table>
-
-
-</body></html>
+                    </td>
+                    <td width="30"></td>
+                </tr>
+                <tr>
+                    <td rowspan="3" height="30"></td>
+                </tr>
+            </tbody>
+        </table>
+        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#fff" style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-align:left">
+            <tbody>
+                <tr>
+                    <td width="30"></td>
+                    <td valign="middle" align="left">
+                        <p style="font-size:15px;color:#3e3e3e;line-height:20px">Copyright © 2016, Cloudents Inc.</p>
+                        <table style="display:block;margin-bottom:20px">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <a href="https://itunes.apple.com/app/id990911114?utm_source=email_student&utm_medium=introduction&amp;utm_campaign=promo" style="display:inline-block" target="_blank">
+                                            <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/apps-apple.png" style="width:135px;height:40px">
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                    <td valign="middle" align="center" width="150">
+                        <div style="margin-bottom:20px">
+                            <p style="font-size:15px;color:#3e3e3e;line-height:20px">
+                                Connect with us<br>
+                            </p>
+                            <a href="https://www.facebook.com/spitballstudy" target="_blank"> <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/fb.png" style="margin-top:5px"></a>
+                            <a href="https://www.twitter.com/SpitballStudy" target="_blank"> <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/tw.png" style="margin-top:5px"></a>
+                            <a href="http://www.instagram.com/spitballstudy" target="_blank"> <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/in.png" style="margin-top:5px"></a>
+                        </div>
+                    </td>
+                    <td width="30"></td>
+                </tr>
+            </tbody>
+        </table>
+        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#ddd" style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-align:center">
+            <tbody>
+                <tr>
+                    <td rowspan="3" height="90"></td>
+                </tr>
+                <tr>
+                    <td width="30"></td>
+                    <td style="width:540px">
+                        <span style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-align:center">
+                            This email was sent to {email}.
+                            <br>To stop getting emails from us <a style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-decoration:underline"> Opt-out.</a>
+                        </span>
+                    </td>
+                    <td width="30"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</body>
+</html>
