Fixes in SpamGun

--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
@@ -106,7 +106,7 @@
                     <td style="width:540px">
                         <span style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-align:center">
                             This email was sent to {email}.
-                            <br>To stop getting emails from us <a style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-decoration:underline"> Opt-out.</a>
+                            <br>To stop getting emails from us <a href="%unsubscribe_url%"  style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-decoration:underline"> Opt-out.</a>
                         </span>
                     </td>
                     <td width="30"></td>
