Change SpamGun Email sender
Change SpamGun table
Resharper fixes.

--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
@@ -50,7 +50,7 @@
                             <br>
 
                             Best,<br>
-                            Michael Baker<br>
+                            Olivia Williams<br>
                             Head of Communications<br>
                             <a style="text-decoration:none;color:#247bd1">https://www.spitball.co/</a><br>
                             79 Madison Ave<br>
