Header full design

--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
@@ -1,118 +1,95 @@
 ﻿<html>
 <head>
-    <META http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="utf-8">
 </head>
-<body>
-    <div style="width:100%!important;background-color:#eee;color:#3393f4;font-family:open sans;margin:0;padding:0;font-family:sans-serif">
-        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#eee">
-            <tbody>
-                <tr>
-                    <td height="30"></td>
-                </tr>
-            </tbody>
-        </table>
-        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#fff">
-            <tbody>
-                <tr>
-                    <td rowspan="3" height="80"></td>
-                </tr>
-                <tr>
-                    <td width="30"></td>
-                    <td align="center" width="540">
-                        <a><img width="220" height="49" align="left" src="https://az32006.vo.msecnd.net/emailimages/logo.jpg" alt="Spitball" title="Spitball"></a>
-                    </td>
-                    <td width="30"></td>
-                </tr>
-                <tr>
-                    <td rowspan="3" height="30"></td>
-                </tr>
-            </tbody>
-        </table>
-        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#fff">
-            <tbody>
-                <tr>
-                    <td rowspan="3" height="30"></td>
-                </tr>
-                <tr>
-                    <td width="30"></td>
-                    <td>
-                        <div style="font-size:15px;font-weight:normal;line-height:24px;color:#231f20;text-align:left">
-                            Hi {name},
-                            <br> <br>
+<body style="width:100% !important; background-color:#fff; color:#3393F4;font-family:open sans; margin:0; padding:0; font-family: sans-serif;">
 
-                            {body}
+    <table align="center" class="m_3428642917872918160m_5262986889967680050outer" style="border-spacing:0;font-family:sans-serif;color:#333333;Margin:0 auto;width:100%;max-width:600px; background-color=#ffffff">
 
-                            <br><br>
-                            <div>
-                                <a href="https://itunes.apple.com/app/id990911114?utm_source=email_student&utm_medium=introduction&amp;utm_campaign=promo" style="height:25px;width:200px;font-size:20px;line-height:25px;color:#ffffff;padding:5px 10px 5px 10px;text-decoration:none;color:#ffffff;text-decoration:none;border-radius:10px;border:1px solid #3393f4;text-align:center;margin:0 auto;display:block;background-color:#3393f4" target="_blank">Take me to Spitball</a>
 
-                            </div>
-                            <br>
+        <tbody>
+            <tr>
+                <td style="padding-top:20px;padding-bottom:0;padding-right:0;padding-left:0">
 
-                            Best,<br>
-                            Olivia Williams<br>
-                            Head of Communications<br>
-                            <a style="text-decoration:none;color:#247bd1">https://www.spitball.co/</a><br>
-                            79 Madison Ave<br>
-                            New York, NY 10016<br><br>
-                        </div>
-                    </td>
-                    <td width="30"></td>
-                </tr>
-                <tr>
-                    <td rowspan="3" height="30"></td>
-                </tr>
-            </tbody>
-        </table>
-        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#fff" style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-align:left">
-            <tbody>
-                <tr>
-                    <td width="30"></td>
-                    <td valign="middle" align="left">
-                        <p style="font-size:15px;color:#3e3e3e;line-height:20px">Copyright © 2017, Cloudents Inc.</p>
-                        <table style="display:block;margin-bottom:20px">
+                    <table border="0" cellpadding="0" cellspacing="0" style="color:white;font-weight:300;background-color:#1caff6;background-image:none;background-repeat:repeat;background-position:top left;border-radius:10px 10px 0 0;text-align:left;width:100%;padding-top:10px;padding-bottom:10px;padding-right:10px;padding-left:30px;border-spacing:0;font-family:sans-serif">
+                        <tbody>
+                            <tr>
+                                <td style="border-right-width:1px;border-right-style:solid;border-right-color:#1caff6;text-align:left;width:50%;vertical-align:middle;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0" valign="middle">
+
+                                    <a href="https://itunes.apple.com/app/id990911114?utm_source=email_student&amp;utm_medium=introduction&amp;utm_campaign=promo" style="text-decoration:none;border-style:none;font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif;border-width:0px" target="_blank">
+                                        <img src="https://zboxstorage.blob.core.windows.net/universities/logo_white2.png" style="border-style:none;padding-right:15px;width:220px;border-width:0;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-left:0;vertical-align:middle" class="m_3428642917872918160CToWUd CToWUd">
+                                    </a>
+                                </td>
+
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+
+            <tr>
+                <td height="30"></td>
+            </tr>
+            <tr>
+                <td align="left" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0">
+                    <p class="m_3428642917872918160m_5262986889967680050small-padding-bottom" style="font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif;Margin:0;color:#9b9b9b;font-size:14px;line-height:22px;text-align:left;font-weight:400;padding-bottom:20px">Hi {name},</p>
+                </td>
+            </tr>
+            <tr>
+                <td align="left" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0">
+                    <p class="m_3428642917872918160m_5262986889967680050small-padding-bottom" style="font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif;Margin:0;color:#9b9b9b;font-size:14px;line-height:22px;text-align:left;font-weight:400;padding-bottom:20px">{body}</p>
+                </td>
+            </tr>
+            <tr>
+                <td align="center" class="m_3428642917872918160m_5262986889967680050padding-bottom m_3428642917872918160m_5262986889967680050border-bottom" colspan="2" style="padding-top:0;padding-right:0;padding-left:0;padding-bottom:30px;border-bottom-width:0px;border-bottom-style:solid;border-bottom-color:#eeeeee">
+                    <a href="https://itunes.apple.com/app/id990911114?utm_source=email_student&amp;utm_medium=introduction&amp;utm_campaign=promo" style="width:100%;max-width:280px;font-size:14px;font-weight:bold;color:#ffffff;text-decoration:none;display:inline-block;font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif;border-width:0px" target="_blank">
+                        <table align="center" border="0" cellpadding="0" cellspacing="0" style="border-spacing:0;font-family:sans-serif;color:#333333" width="100%">
                             <tbody>
                                 <tr>
-                                    <td>
-                                        <a href="https://itunes.apple.com/app/id990911114?utm_source=email_student&utm_medium=introduction&amp;utm_campaign=promo" style="display:inline-block" target="_blank">
-                                            <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/apps-apple.png" style="width:135px;height:40px">
-                                        </a>
+                                    <td style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0">
+
+                                        <table align="center" border="0" cellpadding="0" cellspacing="0" class="m_3428642917872918160m_5262986889967680050primary-btn" style="width:100%;border-spacing:0;font-family:sans-serif;color:#333333">
+                                            <tbody>
+                                                <tr>
+                                                    <td align="center" bgcolor="#f5a323" style="padding-top:12px;padding-bottom:12px;padding-right:18px;padding-left:18px;border-radius:50px;color:#ffffff;font-weight:400; font-size:22px">
+                                                        <span style="font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif">Get Spitball For Free<span class="m_3428642917872918160il"><span class="il"></span></span></span>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
-                    </td>
-                    <td valign="middle" align="center" width="150">
-                        <div style="margin-bottom:20px">
-                            <p style="font-size:15px;color:#3e3e3e;line-height:20px">
-                                Connect with us<br>
-                            </p>
-                            <a href="https://www.facebook.com/spitballstudy" target="_blank"> <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/fb.png" style="margin-top:5px"></a>
-                            <a href="https://www.twitter.com/SpitballStudy" target="_blank"> <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/tw.png" style="margin-top:5px"></a>
-                            <a href="http://www.instagram.com/spitballstudy" target="_blank"> <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/in.png" style="margin-top:5px"></a>
-                        </div>
-                    </td>
-                    <td width="30"></td>
-                </tr>
-            </tbody>
-        </table>
-        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" bgcolor="#ddd" style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-align:center">
-            <tbody>
-                <tr>
-                    <td rowspan="3" height="90"></td>
-                </tr>
-                <tr>
-                    <td width="30"></td>
-                    <td style="width:540px">
-                        <span style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-align:center">
-                            This email was sent to {email}.
-                            <br>To stop getting emails from us <a href="%unsubscribe_url%"  style="font-size:12px;font-weight:normal;line-height:18px;color:#231f20;text-decoration:underline"> Opt-out.</a>
-                        </span>
-                    </td>
-                    <td width="30"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+                    </a>
+                </td>
+            </tr>
+            </tr>
+            <tr>
+                <td align="left" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0">
+                    <p class="m_3428642917872918160m_5262986889967680050small-padding-bottom" style="font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif;Margin:0;color:#9b9b9b;font-size:14px;line-height:22px;text-align:left;font-weight:400;padding-bottom:20px">
+                        Best,<br>
+                        Olivia Williams<br>
+                        Head of Communications<br>
+                        <a style="text-decoration: none; color: #247bd1;" href="{uni_Url}">https://www.spitball.co/</a><br>
+                        79 Madison Ave<br>
+                        New York, NY 10016<br><br>
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td align="center" width="540" style="font-size:12px;background-color: #eee; BORDER-bottom-RIGHT-RADIUS: 10PX;BORDER-bottom-LEFT-RADIUS: 10PX;">
+                    <div style="padding-top:10px; color:#9b9b9b">
+                        This email was sent to {email}.
+                        <br>To stop getting emails from us  <a href="%unsubscribe_url%" style="color:#9b9b9b;font-size:12px;text-decoration:underline;border-style:none;font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif;border-width:0px;top margin:10px;"> Opt-out.</a>
+
+                        <p style="font-size:12px;color:#9b9b9b;line-height:20px;padding-bottom:0px">Copyright © 2017, Cloudents Inc.</p>
+                    </div>
+                </td>
+
+            </tr>
+        <tbody>
+    </table>
+
 </body>
 </html>
