--- a/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
+++ b/Zbang.Zbox.Infrastructure.Mail/MailTemplate/SpamGun.html
@@ -17,7 +17,7 @@
                                 <td style="border-right-width:1px;border-right-style:solid;border-right-color:#1caff6;text-align:left;width:50%;vertical-align:middle;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0" valign="middle">
 
                                     <a href="https://itunes.apple.com/app/id990911114?utm_source=email_student&amp;utm_medium=introduction&amp;utm_campaign=promo" style="text-decoration:none;border-style:none;font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif;border-width:0px" target="_blank">
-                                        <img src="https://zboxstorage.blob.core.windows.net/universities/logo_white2.png" style="border-style:none;padding-right:15px;width:220px;border-width:0;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-left:0;vertical-align:middle" class="m_3428642917872918160CToWUd CToWUd">
+                                        <img src="https://zboxstorage.blob.core.windows.net/universities/logo_white2.png" style="border-style:none;padding-right:15px;width:220px;border-width:0;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-left:0;vertical-align:middle" class="m_3428642917872918160CToWUd CToWUd" alt="Spitball">
                                     </a>
                                 </td>
 
@@ -31,12 +31,12 @@
                 <td height="30"></td>
             </tr>
             <tr>
-                <td align="left" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0">
+                <td align="left" style="padding-top:0;padding-bottom:0;padding-right:10px;padding-left:30px;">
                     <p class="m_3428642917872918160m_5262986889967680050small-padding-bottom" style="font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif;Margin:0;color:#9b9b9b;font-size:14px;line-height:22px;text-align:left;font-weight:400;padding-bottom:20px">Hi {name},</p>
                 </td>
             </tr>
             <tr>
-                <td align="left" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0">
+                <td align="left" style="padding-top:0;padding-bottom:0;padding-right:10px;padding-left:30px;">
                     <p class="m_3428642917872918160m_5262986889967680050small-padding-bottom" style="font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif;Margin:0;color:#9b9b9b;font-size:14px;line-height:22px;text-align:left;font-weight:400;padding-bottom:20px">{body}</p>
                 </td>
             </tr>
@@ -66,7 +66,7 @@
             </tr>
             </tr>
             <tr>
-                <td align="left" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0">
+                <td align="left" style="padding-top:0;padding-bottom:0;padding-right:10px;padding-left:30px;">
                     <p class="m_3428642917872918160m_5262986889967680050small-padding-bottom" style="font-family:'Museo Sans Rounded',Museo Sans Rounded,'Museo Sans',Museo Sans,'Helvetica Neue',Helvetica,Arial,sans-serif;Margin:0;color:#9b9b9b;font-size:14px;line-height:22px;text-align:left;font-weight:400;padding-bottom:20px">
                         Best,<br>
                         Olivia Williams<br>
@@ -75,6 +75,13 @@
                         79 Madison Ave<br>
                         New York, NY 10016<br><br>
                     </p>
+                </td>
+            </tr>
+            <tr>
+                <td align="center">
+                    <a target="_blank" href="https://itunes.apple.com/app/id990911114?utm_source=email_student&amp;utm_medium=introduction&amp;utm_campaign=promo">
+                        <img src="https://zboxstorage.blob.core.windows.net/zboxhelp/apps-apple.png" style="width: 135px; height: 40px;padding-top:20px;padding-bottom:30px" alt="spitball">
+                    </a>
                 </td>
             </tr>
             <tr>
